fix slider position on safari

--- a/src/frontend/src/components/skill-item/skill-item-editor.less
+++ b/src/frontend/src/components/skill-item/skill-item-editor.less
@@ -3,6 +3,7 @@
 	display: flex;
 	justify-content: space-between;
 	position: absolute;
+  left: 0;
 
 	&__skill-editor,
 	&__will-editor {
